Bug 90243 - [bisected] regression: spec.!opengl 3_2.get-active-attrib-returns-all-inputs
Summary: [bisected] regression: spec.!opengl 3_2.get-active-attrib-returns-all-inputs
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tapani Pälli
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-29 18:05 UTC by Mark Janes
Modified: 2015-05-06 08:31 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
patch to fix the issue (1.99 KB, patch)
2015-04-30 05:34 UTC, Tapani Pälli
Details | Splinter Review

Description Mark Janes 2015-04-29 18:05:59 UTC
mesa 114ac39a888509b133f15ddae813fcf64adc72a7, written to address bug 90207, caused this piglit regression.

Tapani asked that the bug be assigned directly to him, he knows what the issue is.

/tmp/build_root/m32/lib/piglit/bin/gl-get-active-attrib-returns-all-inputs -auto -fbo
piglit_vertex was not counted as active.
Comment 1 Tapani Pälli 2015-04-30 05:34:30 UTC
Created attachment 115466 [details] [review]
patch to fix the issue

will run piglits and some application testing
Comment 2 lu hua 2015-05-04 02:35:54 UTC
I also meet this fail.
output:
piglit_vertex was not counted as active.
PIGLIT: {"result": "fail" }
Comment 3 Tapani Pälli 2015-05-06 08:31:05 UTC
pushed in master


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.